# biblatex2bibtex

./: .bumpversion.cfg  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml
src/biblatex2bibtex/: __init__.py  __main__.py  cli.py
src/biblatex2bibtex/data/: biblatex2bibtex.conf
