[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Convert biblatex files to bibtex.
keywords =
    biblatex
    bibtex
long_description = file: README.md
long_description_content_type = text/markdown
name = biblatex2bibtex
project_urls =
    Bug Tracker = https://github.com/fmatter/biblatex2bibtex/issues
url = https://github.com/fmatter/biblatex2bibtex
version = 0.0.1.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    colorlog
    argparse
    bibtexparser >= 1.4.0
    pybtex >= 0.24.0

[options.entry_points]
console_scripts =
    biblatex2bibtex=biblatex2bibtex.cli:main


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.7
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    sphinxcontrib-napoleon
    tox
    myst_parser
    flake8
    twine
    jinja2
    keepachangelog
publishing =
    twine
    wheel

[options.packages.find]
include = biblatex2bibtex, biblatex2bibtex.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = biblatex2bibtex
src_paths = biblatex2bibtex,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    biblatex2bibtex

[coverage:report]
show_missing = true